force-app/main/default/objects/Account/fields/ActiveProducts__c.field-meta.xml
<CustomField>
    <fullName>ActiveProducts__c</fullName>
    <label>Active Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>