force-app/main/default/objects/Account/fields/AverageAccountBalance__c.field-meta.xml
<CustomField>
    <fullName>AverageAccountBalance__c</fullName>
    <label>Average Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>