force-app/main/default/objects/Account/fields/ClientProfitability__c.field-meta.xml
<CustomField>
    <fullName>ClientProfitability__c</fullName>
    <label>Client Profitability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>