force-app/main/default/objects/Account/fields/ClientSatisfactionScore__c.field-meta.xml
<CustomField>
    <fullName>ClientSatisfactionScore__c</fullName>
    <label>Client Satisfaction Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>