force-app/main/default/objects/Account/fields/CreditExposure__c.field-meta.xml
<CustomField>
    <fullName>CreditExposure__c</fullName>
    <label>Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>