force-app/main/default/objects/Account/fields/CrossSellPotential__c.field-meta.xml
<CustomField>
    <fullName>CrossSellPotential__c</fullName>
    <label>Cross-Sell Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>