force-app/main/default/objects/Account/fields/DIC__c.field-meta.xml
<CustomField>
    <fullName>DIC__c</fullName>
    <label>DIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>