force-app/main/default/objects/Account/fields/ICO__c.field-meta.xml
<CustomField>
    <fullName>ICO__c</fullName>
    <label>ICO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>