force-app/main/default/objects/Account/fields/MonthlyTransactionVolume__c.field-meta.xml
<CustomField>
    <fullName>MonthlyTransactionVolume__c</fullName>
    <label>Monthly Transaction Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>