force-app/main/default/objects/Account/fields/NextReviewDate__c.field-meta.xml
<CustomField>
    <fullName>NextReviewDate__c</fullName>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>