force-app/main/default/objects/Account/fields/TotalPortfolioValue__c.field-meta.xml
<CustomField>
    <fullName>TotalPortfolioValue__c</fullName>
    <label>Total Portfolio Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>